--- a/siteteste/base/templates/base/login_register.html
+++ b/siteteste/base/templates/base/login_register.html
@@ -1,5 +1,6 @@
 {% extends 'main.html' %}
 {% block content %}
+{% if page == 'login' %}
 <div>
     <form action="" method="POST">
         {% csrf_token %}
@@ -10,5 +11,21 @@
 
         <input type="submit" value="login">
     </form>
+    <p>Não tem uma conta ?</p>
+    <a href="{% url 'register' %}">Cadastro</a>
 </div>
+
+{% else %}
+
+<div>
+    <form action="" method="POST">
+        {% csrf_token %}
+        {{form.as_p}}
+        <input type="submit" value="Register">
+    </form>
+    <p>Ja tem uma conta ?</p>
+    <a href="{% url 'login' %}">Login</a>
+</div>
+{% endif %}
+
 {% endblock content %}
