--- a/siteteste/templates/navbar.html
+++ b/siteteste/templates/navbar.html
@@ -4,5 +4,10 @@
 <form action="{% url 'home' %}" method="get">
     <input type="text" name="q" placeholder="Barra de pesquisa rooms">
 </form>
+{% if request.user.is_authenticated %}
+<p>Olá {{ request.user }}</p>
+<a href="{% url 'logout' %}">Logout</a>
+{% else %}
 <a href="{% url 'login' %}">Login</a> 
+{% endif %}
 <hr>
